TEST_PROGRAMS/typing_benchmarks/invalid/opassign1.go
package main

func main() {
	var x int
	var y float64

	x += y
}
